kadu (0.11.1-1) unstable; urgency=high

  * New upstream release
  * This upstream versions contains important security issues introduced in
    version 0.9.0.
  * Bumped Standards-Version to 3.9.3

 -- Patryk Cisek <patryk@debian.org>  Sun, 26 Feb 2012 19:05:28 +0100

kadu (0.11.0-2) unstable; urgency=low

  * Added aspell package to Build-Depends
  * 0-e

 -- Patryk Cisek <patryk@debian.org>  Sun, 26 Feb 2012 19:54:09 +0100

kadu (0.11.0-1) unstable; urgency=low

  * New upstream release
  * Updated messagessplitter to newest upstream version

 -- Patryk Cisek <patryk@debian.org>  Sat, 04 Feb 2012 14:37:35 +0100

kadu (0.11.0~rc3-1) unstable; urgency=low

  * New upstream release
  * Renamed 05-lowered_expectant_libgadu_version.patch to 04-
    lowered_expectant_libgadu_version.patch

 -- Patryk Cisek <patryk@debian.org>  Thu, 02 Feb 2012 16:52:30 +0100

kadu (0.11.0~rc2-1) unstable; urgency=low

  * New upstream release
  * Removed debian/patches/04-backport_patch-
    only_send_jabber_status_to_server_when_connecting.patch included
    upstream.

 -- Patryk Cisek <patryk@debian.org>  Thu, 19 Jan 2012 16:45:02 +0100

kadu (0.11.0~rc1-1) unstable; urgency=low

  * New upstream release
  * Updated all external plugins to their newest upstream versions
  * Updated debian/patches/02-external-plugins.patch
  * Added indicator_docking plugin
  * Backported fix for Kadu patch from git. It fixes problem with
    reconnecting after suspend.
  * Updated debian/patches/02-external-plugins.patch
  * Lowered minimum expected version of libgadu. See description in
    debian/patches/05-lowered_expectant_libgadu_version.patch for more
    details.
  * Added libindicate-qt-dev to Build-Depends

 -- Patryk Cisek <patryk@debian.org>  Mon, 16 Jan 2012 10:08:06 +0100

kadu (0.10.1-1) unstable; urgency=low

  * New upstream release
  * Removed debian/patches/04-globalhotkeys.patch -- no longer needed.
  * Updated debian/patches/03-about-dialog.patch for Kadu 0.10.1